  * Fix shared lock file FD leak.
  * Fix metadata hook behavior when multiple files are added at once.
    Thanks, Klaus Ethgen.
  * Added dependencies on haskell mountpoints and disk-free-space
    libraries, removing FFI code from git-annex.
  * dropkey: Add --batch and --json.
  * Fix OSX dmg to include libraries needed by bundled gpg,
    lost in last release.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Feb 2016 13:00:30 -0400

git-annex (6.20160229) unstable; urgency=medium

  * Update perlmagick build dependency. Closes: #789225
  * Fix memory leak in last release, which affected commands like
    git-annex status when a large non-annexed file is present in the work
    tree.
  * fsck: When the only copy of a file is in a dead repository, mention
    the repository.
  * info: Mention when run in a dead repository.
  * Linux and OSX standalone builds put the bundled gpg last in PATH,
    so any system gpg will be preferred over it.
  * Avoid crashing when built with MagicMime support, but when the magic
    database cannot be loaded.
  * Include magic database in the linux and OSX standalone builds.
  * Fix memory leak when hashing files, which triggered during fsck
    when an external hash program was not used.
    (This leak was introduced in version 6.20160114.)
  * Support --metadata field<number, --metadata field>number etc
    to match ranges of numeric values.
  * Similarly, support preferred content expressions like
    metadata=field<number and metadata=field>number
  * The pre-commit-annex hook script that automatically extracts
    metadata has been updated to also use exiftool.
    Thanks, Klaus Ethgen.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Feb 2016 12:41:49 -0400

git-annex (6.20160217) unstable; urgency=medium

  * Support getting files from read-only repositories.
  * checkpresentkey: Allow to be run without an explicit remote.
  * checkpresentkey: Added --batch.
  * Work around problem with concurrent-output when in a non-unicode locale